--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="entradaDatos-container">
       <div class="inputDatos">
-        <textarea placeholder="Ingrese el texto aqui"></textarea>
+        <textarea id="txaIngresoTexto" placeholder="Ingrese el texto aqui"></textarea>
       </div>
 
       <div class="buttonAdvertencia">
@@ -25,8 +25,8 @@
           <p>Solo letras minusculas y sin acento</p>
         </div>
         <div class="buttonsDatos">
-          <button>Encriptar</button>
-          <button>Desencriptar</button>
+          <button id="btnEncriptar">Encriptar</button>
+          <button id="btnDesencriptar" >Desencriptar</button>
         </div>
       </div>
     </section>
@@ -42,11 +42,13 @@
           <p>Ingresa el texto que desees encriptar o desencriptar</p>
         </div>
         <div class="button-mensaje inactive">
-          <button>Copiar</button>
+          <button id="btnCopiar">Copiar</button>
         </div>
       </div>
     </section>
   </body>
-  
+  <script src="main.js">
+
+  </script>
 </html>
 
