logica de botones y encriptacion

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
   </head>
   <body>
+
+    <section class="allContainer">
+
     <section class="logoAlura-container">
       <figure class="imgAlura">
         <img src="./Img/VectorLogo.png" alt="Logo Alura" />
@@ -34,7 +37,7 @@
     <section class="mensaje-container">
       <div class="ventana">
         <div class="mensaje inactive">
-          <p>Aqui Mensaje</p>
+          <p id="pMostrarTexto">Aqui Mensaje</p>
         </div>
         <div class="imgTexto">
           <img src="./Img/Muñeco.png" alt="Ningun Mensaje png" />
@@ -46,7 +49,14 @@
         </div>
       </div>
     </section>
+
+  </section>
+
+    <footer>Development by Harold Martinez</footer>
+
   </body>
+
+  
   <script src="main.js">
 
   </script>
