boton copiar y redes sociales

--- a/index.html
+++ b/index.html
@@ -52,7 +52,30 @@
 
   </section>
 
-    <footer>Development by Harold Martinez</footer>
+    <footer>
+      <div class="development">
+        Development by Harold Martinez</a>
+      </div>
+      <div class="redesSociales">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/harold-martinezb/"
+              ><img src="./Img/icons8-linkedin-400.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/bhar0ld/"
+              ><img src="./Img/icons8-instagram-400.svg"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/H4r0ld"
+              ><img src="./Img/icons8-github-squared-400.svg"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
   </body>
 
